Fix: Remove width attribute on feature image container in styles to resolve layout issue

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -60,10 +60,6 @@ body {
 }
 
 /* Home page: Featured image styles */
-.featured-image-container {
-    width: 100vw;
-}
-
 .home-image {
     background: url("/static/images/wimpleton_home_1067x600.webp") no-repeat center/cover, #445261;
     height: 400px;
